revising the intro and being short

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -203,7 +203,7 @@ Correspondence concerning this article should be addressed to Hu Chuan-Peng, Sch
 \affiliation{\vspace{0.5cm}\textsuperscript{1} Nanjing Normal University, 210024 Nanjing, China\\\textsuperscript{2} Tsinghua University, 100084 Beijing, China\\\textsuperscript{3} University of Aberdeen, Aberdeen, Scotland}
 
 \abstract{%
-Moral character is central to social perception and moral psychology, previous studies explain the salience effect of moral character in terms of valence effect, i.e., either negativity effect and positivity effect. In this study, we report 9 experiments (N = 4XX, trials = XXX) where we find (1) there is a robust good character prioritization effect in social associative learning task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) prioritization of good character was robust only when it is relevant to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when one of the label became task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character.
+Morality is central to social perception and moral psychology, previous studies found that information related to moral character is prioritized information processing and explained the effect in terms of valence, i.e., either as a negativity or positivity effect. In this study, we report 9 experiments (N = 4XX, trials = XXX) where we find (1) there is a robust good character prioritization effect in perceptual matching task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) the prioritization of good character was robust only when the good character is referred to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when either the self or the moral character information was task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character.
 }
 
 
@@ -227,33 +227,14 @@ The positivity effect, i.e., good moral characters are prioritized, is also plau
 
 These two possibilities, however, ignore the agency of participants who is perceiving the information and making perceptual decisions. The external stimuli only contain subjective value if they are relevant to the self of the decision-maker {[}{]}. When it comes to moral character, there are long-history of studies showing that moral character is central for people's self-concept and identity. A positive moral character is viewed as the core feature of identity (e.g., Strohminger, Knobe, \& Newman, 2017). A lot of studies revealed that people distort their perception, memory, and change their actions to maintain a positive view of their moral self-view. Given this strong motivation, it is possible that participant has spontaneous self-referential for the perception tasks where no self-referential process were not explicitly excluded {[}citation related to spontaneous self-referential{]}.
 
-Here, we report nine experiments where we found (1) there is a robust good character prioritization effect in social associative learning task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) prioritization of good character was robust only when it is relevant to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when one of the label became task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character.
-
-\hypertarget{prioritization-of-moral-chararcter}{%
-\subsection{Prioritization of moral chararcter}\label{prioritization-of-moral-chararcter}}
-
-\hypertarget{using-soical-associative-task}{%
-\subsection{Using soical associative task}\label{using-soical-associative-task}}
-
-we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences --- participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
-
-The positivity effect consistent with previous studies where positivity effect of social trait words were found (Anselmi et al., 2011; Bargh et al., 1992; Unkelbach et al., 2010). However, the effect could not be explained by the similarity hypothesis (Unkelbach et al., 2020) because we only used three stimuli. There are two possibility explanations. The first one is the value-based attention account, which suggests that stimuli that are valuable to us are prioritized (B. A. Anderson, 2019). In our experiments, the good character label ``good person'' may represent an indirect but valuable stimuli because, in social life, a good other is usually more valuable than an bad other (Abele \& Wojciszke, 2007). Another possibility is derived from social categorization theory, which suggested that we automatically categorize others as in-group or out-group (Turner, Hogg, Oakes, Reicher, \& Wetherell, 1987). Moral character is an important criterion for social categorization (DeScioli, 2016; McHugh, McGann, Igou, \& Kinsella, 2019). However, the above four experiments could not distinguish between these two possibilities, because ``good person'' could both be rewarding and be categorized as in-group member. Given that both rewarding stimuli (e.g., Sui, He, \& Humphreys, 2012) and in-group information (Enock, Hewstone, Lockwood, \& Sui, 2020) are prioritized when using social associative learning paradigm, we further tested these two possibilities in new experiments.
-
-To distinguish the value-based account and the social categorization explanations, we introduced the identity (self- vs.~other-referential) of moral character as an addition independent variable in exp 3a, 3b, and 6b. Now moral valence is orthogonal to the identity. In this case, the identity of moral character information become salient and participants are less likely to spontaneously categorize a good-other as an extension of self, but the value of good-person still exists. If the positivity effect was driven by social categorization theory, then participants prioritize good-self but not good-other. If the value-based attention theory is true, then, both good-self and good-other are prioritized, or maybe good-other are even more prioritized.
-
-Although the introduction of self- and other-referential processing provided evident that value-based account can not explain the good-character effect, it might introduce the good-self effect, i.e., the good-self is prioritized over all the other stimuli. This effect, if true, may suggest underlying mechanisms other than social-categorization. For example, the moral true self account. Moral true self view suggested that moral self if the true self (Strohminger et al., 2017). Therefore, even good-self can be viewed as categorized to in-group, it can also be viewed as the core of the self and it is the anchor of all the other effects.
-
-To test the moral true self view and the social-categorization account, we designed two complementary experiments. In experiment 4a, participants only learned the association between self and other, the words ``good-person'', ``neutral person'', and ``bad person'' were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between ``good-person'', ``neutral-person'', and ``bad-person'', and the ``self'' and ``other'' were presented as task-irrelevant stimuli. These two experiments can be used to distinguish the moral-self view and social categorization'' account. If moral-self view is true, then, in both experiments, good-self will show advantage over all other stimuli, and there will be no other effects. More specifically, in experiment 4a, where only the self-referential processing is task-relevant, there will be advantage for good as task-irrelevant condition than when bad or neutral character as task-irrelevant for the self conditions, while there is no other effects; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition, and no other effects. If social categorization is true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good effect in self conditions, this prediction is the same as the moral self-view; it predicts a reverse good effect in other condition because good and other a conflict in terms of social-categorization, this prediction is different from the ``good-self'' anchor account; however, for experiment 4b, it predicts no identity effect in the good-person condition because both self and other are in the good group.
-
-{[}Good self in self-reported data{]}
-As an exploration, we also collected participants' self-reported psychological distance between self and good-person, bad-person, and neutral-person, moral identity, moral self-image, and self-esteem. All these data are available (see Liu et al., 2020). We explored the correlation between self-reported distance and these questionnaires as well as the questionnaires and behavioral data. However, given that the correlation between self-reported score and behavioral data has low correlation (Dang, King, \& Inzlicht, 2020), we didn't expect a high correlation between these self-reported measures and the behavioral data.
+Here, we report nine experiments where we found (1) there is a robust good character prioritization effect in social associative learning task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) prioritization of good character was robust only when it is relevant to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when one of the label became task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character. In all experiments, a social associative learning task in which th effect of physical features are minimized --- participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes.
 
 \hypertarget{disclosures}{%
 \section{Disclosures}\label{disclosures}}
 
 We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis. These excluded data can be found in the shared raw data files.
 
-All the experiments reported were not pre-registered. Most experiments (1a \textasciitilde{} 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017. To have a better estimation of the effect size, we included the data from unreported data in our three-level models (experiment 5, 6a, 6b) (See Table S1 for overview of these experiments).
+All the experiments reported were not pre-registered. Most experiments (1a \textasciitilde{} 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017 (See Table S1 for overview of these experiments).
 
 All participant received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Psychology, Tsinghua University.
 
@@ -263,7 +244,7 @@ All participant received informed consent and compensated for their time. These 
 \hypertarget{design-and-procedure}{%
 \subsection{Design and Procedure}\label{design-and-procedure}}
 
-This series of experiments studied the perceptual process of moral character, using the social associative learning paradigm (or tagging paradigm, see (Sui et al., 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral character (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase.
+This series of experiments studied the perceptual process of moral character, using the social associative learning paradigm (or tagging paradigm, see (Sui, He, \& Humphreys, 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral character (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase.
 
 The experiment 1a, 1b, 1c, 2, 5, and 6a shared a 2 (matching: match vs.~nonmatch) by 3 (moral character: good vs.~neutral vs.~bad person) within-subject design. Experiment 1a was the first one of the whole series studies and found the prioritization of stimuli associated with good-person. To confirm that it is the moral character that caused the effect, we further conducted experiment 1b, 1c, and 2. More specifically, experiment 1b used different Chinese words as labels to test whether the effect only occurred with certain words. Experiment 1c manipulated the moral valence indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes. Note that part of participants of experiment 2 were from experiment 1a because we originally planned a cross task comparison. Experiment 5 was designed to compare the effect size of moral character and other importance social evaluative dimensions (aesthetics and emotion). Different social evaluative dimensions were implemented in different blocks, the moral character blocks shared the design of experiment 1a. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
 
@@ -377,28 +358,28 @@ we expanded the RT model three-level model in which participants and experiments
 \[\mu_{k} \sim N(\mu, \sigma)\]
 \[\theta_{k} \sim Cauchy()\]
 
-\hypertarget{effect-of-moral-character}{%
-\subsubsection{Effect of moral character}\label{effect-of-moral-character}}
+\hypertarget{prioritization-of-good-character}{%
+\subsubsection{Prioritization of good character}\label{prioritization-of-good-character}}
 
 We estimated the effect size of \(d'\) and RT from experiment 1a, 1b, 1c, 2, 5, and 6a for the effect of moral character. We reported fixed effect of three-level BHM that included all experiments that tested the valence effect.
 
-\hypertarget{interaction-between-moral-character-and-self-referential-process}{%
-\subsubsection{Interaction between moral character and self-referential process}\label{interaction-between-moral-character-and-self-referential-process}}
+\hypertarget{prioritization-of-good-character-is-modulated-by-self-referential}{%
+\subsubsection{Prioritization of good character is modulated by self-referential}\label{prioritization-of-good-character-is-modulated-by-self-referential}}
 
 We also estimated the interaction between moral character and self-referential process, which included results from experiment 3a, 3b, and 6b. Using three-level models, we tested two possible explanations for the prioritization of good character: value-based or social categorization based prioritization.
 
-\hypertarget{implicit-interaction-between-valence-and-self-relevance}{%
-\subsubsection{Implicit interaction between valence and self-relevance}\label{implicit-interaction-between-valence-and-self-relevance}}
+\hypertarget{spontaenous-binding-between-self-and-good-character}{%
+\subsubsection{Spontaenous binding between self and good character}\label{spontaenous-binding-between-self-and-good-character}}
 
 In the third part, we focused on experiment 4a and 4b, which were designed to examine two more nuanced explanation concerning the good-self. The design of experiment 4a and 4b are complementary. Together, they can test whether participants are more sensitive to the moral character of the Self (4a), or the identity of the good character (4b).
 
-For the questionnaire part, we are most interested in the self-rated distance between different person and self-evaluation related questionnaires: self-esteem, moral-self identity, and moral self-image. Other questionnaires (e.g., personality) were not planned to correlated with behavioral data were not included. Note that all questionnaire data were reported in (Liu et al., 2020).
+We did not analyze the questionnaire data, which were described in (Liu et al., 2020).
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
 
-\hypertarget{perceptual-processing-moral-character-related-information}{%
-\subsection{Perceptual processing moral character related information}\label{perceptual-processing-moral-character-related-information}}
+\hypertarget{prioritization-of-good-character-related-information}{%
+\subsection{Prioritization of good character related information}\label{prioritization-of-good-character-related-information}}
 
 In this part, we report results from five experiments that tested whether an associative learning task, including 192 participants. Note that for both experiment 1a and 1b, there were two independent samples with different equipment, trials numbers and testing situations. Therefore, we modeled them as independent samples. These five experiments revealed a robust effect of moral character on perceptual matching task.
 
@@ -414,12 +395,12 @@ For the reaction times, we also found robust effect of moral character for both 
 
 For the nonmatch trials, we also found the advantage of good character: Shapes associated with good character (median = 653.21 ms, 95\% HDI = {[}574.65 739.57{]}) are faster than shapes associated with neutral (median = 671.14 ms, 95\% HDI = {[}591.71 760.09{]}), \(median_{diff}\) = -17.65 ms, 95\% HDI {[}-23.85 -10.36{]}. Similarly, the shapes associated with bad character (median = 676.35 ms, 95\% HDI = {[}599.13 767.76{]}) was responded slower than shapes associated with neutral character, \(median_{diff}\) = 17.04 ms, 95\% HDI {[}4.02 29.92{]}, but the effect size was smaller, (\textbf{see supplementary materials}).
 
-\hypertarget{self-referential-process-modulate-prioritization-of-good-character}{%
-\subsection{Self-referential process modulate prioritization of good character}\label{self-referential-process-modulate-prioritization-of-good-character}}
+\hypertarget{self-referential-process-modulates-prioritization-of-good-character}{%
+\subsection{Self-referential process modulates prioritization of good character}\label{self-referential-process-modulates-prioritization-of-good-character}}
 
 In this part, we report results from three experiments (3a, 3b, and 6b) that aimed at testing whether the moral valence effect found in the previous experiments is modulated by self-referential processes. These three experiments included data from 108 participants.
 
-Because we have found that a facilitation effect of good character and slow-down effect of bad character in the first part, in this part, we will focus on the whether such effect interact with self-referential factor. In others words, we not only reported differences between good/bad character with neutral character for self-referential and other-referential separately, but also compare the differences between the difference.
+Because we have found that a facilitation effect of good character and slow-down effect of bad character in the first part, in this part, we will focus on the whether such effect interact with self-referential factor. In others words, we not only reported differences between good/bad character with neutral character for self-referential and other-referential separately, but also compare the differences between the difference. For details of individual studies, please see supplementary materials.
 
 \begin{figure}
 \centering
@@ -431,8 +412,8 @@ For the \emph{d} prime, we found that an interaction between moral character eff
 
 For the RTs part, we also found the interaction between moral character and self-referential, the self- and other-referential differences was below zero for the good vs.~neutral differences (\(median_{diff}\) = -105.39; 95\% HDI = {[}-533.16 281.69{]}) but not for the bad vs.~neutral differences (\(median_{diff}\) = -9.46; 95\% HDI = {[}-290.72 251.38{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -47.58; 95\% HDI = {[}-202.88 16.83{]}) and good-other (\(median_{diff}\) = -57.14; 95\% HDI = {[}-991.89 621.29{]}) conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \ref{fig:plot-bayes2}.
 
-\hypertarget{binding-the-good-and-self}{%
-\subsection{Binding the good and self}\label{binding-the-good-and-self}}
+\hypertarget{spontaneous-binding-between-the-good-character-and-the-self}{%
+\subsection{Spontaneous binding between the good character and the self}\label{spontaneous-binding-between-the-good-character-and-the-self}}
 
 In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance modulated the effect observed in previous experiment.
 
@@ -453,29 +434,6 @@ In experiment 4b, moral character was the task-relevant factor, and we found tha
 Most importantly, we found evidence that task-irrelevant self-referential process also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% CI {[}-.11, .18{]}) or ``bad'' person (\(mean_{diff}\) = -.05, 95\% CI{[}-.18, .09{]}).
 
 The same trend appeared for the RT data. For shapes associated with good person, with a ``self'' inside the shape reduced the reaction times as compared with when a ``other'' inside the shape (\(mean_{diff}\) = -55 ms, 95\%CI{[}-75, -35{]}), but this effect did not occur when the shapes were associated neutral (\(mean_{diff}\) = 10, 95\% CI {[}1, 20{]}) or bad (\(mean_{diff}\) = 5, 95\%CI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
-
-\hypertarget{self-reported-personal-distance}{%
-\subsection{Self-reported personal distance}\label{self-reported-personal-distance}}
-
-\begin{figure}
-\centering
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-person-dist-1.pdf}
-\caption{\label{fig:plot-person-dist}Self-rated personal distance}
-\end{figure}
-
-\begin{figure}
-\centering
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-person-dist-net-1.pdf}
-\caption{\label{fig:plot-person-dist-net}Self-rated personal distance (Network view)}
-\end{figure}
-
-We explored the self-reported psychological distance between different person. Participants were presented a pair of two-person each time, and moved a slide to represent the distance between the pair of two persons. We found that, on average, participants rated self is closest to a neutral person, and then a good person. These two are not different from each other. However, both are closer than the distance between good person and neutral person. On average, participants rated themselves has furthest distance to bad person.
-
-Correlation analysis showed that most psychological distance ratings were positively correlated to each other, but the self-bad and self-good are negatively correlated.
-
-{[}use the network view to visualize the distance{]}
-
-See Figure \ref{fig:plot-person-dist} and Figure \ref{fig:plot-person-dist-net}.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
@@ -505,12 +463,6 @@ Fourth, we find that behavioral data and self-reported data doesn't congruent. W
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
-\leavevmode\vadjust pre{\hypertarget{ref-abele_agency_2007}{}}%
-Abele, A. E., \& Wojciszke, B. (2007). Agency and communion from the perspective of self versus others. \emph{Journal of Personality and Social Psychology}, \emph{93}(5), 751--763. \url{https://doi.org/10.1037/0022-3514.93.5.751}
-
-\leavevmode\vadjust pre{\hypertarget{ref-anderson_neurobiology_2019}{}}%
-Anderson, B. A. (2019). Neurobiology of value-driven attention. \emph{Current Opinion in Psychology}, \emph{29}, 27--33. \url{https://doi.org/10.1016/j.copsyc.2018.11.004}
-
 \leavevmode\vadjust pre{\hypertarget{ref-anderson_visual_2011}{}}%
 Anderson, E., Siegel, E. H., Bliss-Moreau, E., \& Barrett, L. F. (2011). The visual impact of gossip. \emph{Science}, \emph{332}(6036), 1446--1448. \url{https://doi.org/10.1126/science.1201574}
 
@@ -536,12 +488,6 @@ http://dx.doi.org/10.18637/jss.v080.i01}
 \leavevmode\vadjust pre{\hypertarget{ref-Carpenter_2017_stan}{}}%
 Carpenter, B., Gelman, A., Hoffman, M. D., Lee, D., Goodrich, B., Betancourt, M., \ldots{} Riddell, A. (2017). Stan: A probabilistic programming language {[}Journal Article{]}. \emph{Journal of Statistical Software}, \emph{76}(1). \url{https://doi.org/10.18637/jss.v076.i01}
 
-\leavevmode\vadjust pre{\hypertarget{ref-dang_why_2020}{}}%
-Dang, J., King, K. M., \& Inzlicht, M. (2020). Why are self-report and behavioral measures weakly correlated? \emph{Trends in Cognitive Sciences}, \emph{24}(4), 267--269. \url{https://doi.org/10.1016/j.tics.2020.01.007}
-
-\leavevmode\vadjust pre{\hypertarget{ref-descioli_side_taking_2016}{}}%
-DeScioli, P. (2016). The side-taking hypothesis for moral judgment. \emph{Current Opinion in Psychology}, \emph{7}, 23--27. \url{https://doi.org/10.1016/j.copsyc.2015.07.002}
-
 \leavevmode\vadjust pre{\hypertarget{ref-dunbar_gossip_2004}{}}%
 Dunbar, R. I. M. (2004). Gossip in evolutionary perspective. \emph{Review of General Psychology}, \emph{8}(2), 100--110. \url{https://doi.org/10.1037/1089-2680.8.2.100}
 
@@ -550,9 +496,6 @@ Eiserbeck, A., \& Abdel Rahman, R. (2020). Visual consciousness of faces in the 
 
 \leavevmode\vadjust pre{\hypertarget{ref-ellemers_morality_2018}{}}%
 Ellemers, N. (2018). Morality and social identity. In M. van Zomeren \& J. F. Dovidio (Eds.), \emph{The oxford handbook of the human essence} (pp. 147--158). New York, {NY}, {US}: Oxford University Press.
-
-\leavevmode\vadjust pre{\hypertarget{ref-enock_overlap_2020}{}}%
-Enock, F. E., Hewstone, M. R. C., Lockwood, P. L., \& Sui, J. (2020). Overlap in processing advantages for minimal ingroups and the self. \emph{Scientific Reports}, \emph{10}(1), 18933. \url{https://doi.org/10.1038/s41598-020-76001-9}
 
 \leavevmode\vadjust pre{\hypertarget{ref-fiske_attention_1980}{}}%
 Fiske, S. T. (1980). Attention and weight in person perception: The impact of negative and extreme behavior. \emph{Journal of Personality and Social Psychology}, \emph{38}(6), 889--906. \url{https://doi.org/10.1037/0022-3514.38.6.889}
@@ -577,9 +520,6 @@ Hu, C.-P., Lan, Y., Macrae, C. N., \& Sui, J. (2020). Good me bad me: Does valen
 
 \leavevmode\vadjust pre{\hypertarget{ref-Liu_2020_JOPD}{}}%
 Liu, Q., Wang, F., Yan, W., Peng, K., Sui, J., \& Hu, C.-P. (2020). Questionnaire data from the revision of a chinese version of free will and determinism plus scale {[}Journal Article{]}. \emph{Journal of Open Psychology Data}, \emph{8}(1), 1. \url{https://doi.org/10.5334/jopd.49/}
-
-\leavevmode\vadjust pre{\hypertarget{ref-mchugh_moral_2019}{}}%
-McHugh, C., McGann, M., Igou, E. R., \& Kinsella, E. (2019). \emph{Moral judgment as categorization ({MJAC})}. {PsyArXiv}. \url{https://doi.org/10.31234/osf.io/72dzp}
 
 \leavevmode\vadjust pre{\hypertarget{ref-pool_attentional_2016}{}}%
 Pool, E., Brosch, T., Delplanque, S., \& Sander, D. (2016). Attentional bias for positive emotional stimuli: A meta-analytic investigation. \emph{Psychological Bulletin}, \emph{142}(1), 79--106. \url{https://doi.org/10.1037/bul0000026}
@@ -610,9 +550,6 @@ Strohminger, N., Knobe, J., \& Newman, G. (2017). The true self: A psychological
 
 \leavevmode\vadjust pre{\hypertarget{ref-Sui_2012_JEPHPP}{}}%
 Sui, J., He, X., \& Humphreys, G. W. (2012). Perceptual effects of social salience: Evidence from self-prioritization effects on perceptual matching {[}Journal Article{]}. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{38}(5), 1105--1117. \url{https://doi.org/10.1037/a0029792}
-
-\leavevmode\vadjust pre{\hypertarget{ref-turner_rediscovering_1987}{}}%
-Turner, J. C., Hogg, M. A., Oakes, P. J., Reicher, S. D., \& Wetherell, M. S. (1987). \emph{Rediscovering the social group: A self-categorization theory}. Cambridge, {MA}, {US}: Basil Blackwell.
 
 \leavevmode\vadjust pre{\hypertarget{ref-uhlmann_person-centered_2015}{}}%
 Uhlmann, E. L., Pizarro, D. A., \& Diermeier, D. (2015). A person-centered approach to moral judgment: \emph{Perspectives on Psychological Science}. \url{https://doi.org/10.1177/1745691614556679}
