--- a/r-references.bib
+++ b/r-references.bib
@@ -368,3 +368,97 @@
   note = {R package version 1.0.1},
   url = {https://CRAN.R-project.org/package=patchwork},
 }
+@Manual{R-cmdstanr,
+  title = {cmdstanr: R Interface to 'CmdStan'},
+  author = {Jonah Gabry and Rok Češnovar},
+  year = {2022},
+  note = {https://mc-stan.org/cmdstanr/, https://discourse.mc-stan.org},
+}
+@Manual{R-devtools,
+  title = {devtools: Tools to Make Developing R Packages Easier},
+  author = {Hadley Wickham and Jim Hester and Winston Chang and Jennifer Bryan},
+  year = {2022},
+  note = {R package version 2.4.5},
+  url = {https://CRAN.R-project.org/package=devtools},
+}
+@Manual{R-ggridges,
+  title = {ggridges: Ridgeline Plots in 'ggplot2'},
+  author = {Claus O. Wilke},
+  year = {2021},
+  note = {R package version 0.5.3},
+  url = {https://CRAN.R-project.org/package=ggridges},
+}
+@Article{R-lavaan,
+  title = {{lavaan}: An {R} Package for Structural Equation Modeling},
+  author = {Yves Rosseel},
+  journal = {Journal of Statistical Software},
+  year = {2012},
+  volume = {48},
+  number = {2},
+  pages = {1--36},
+  doi = {10.18637/jss.v048.i02},
+}
+@Manual{R-matrixStats,
+  title = {matrixStats: Functions that Apply to Rows and Columns of Matrices (and to
+Vectors)},
+  author = {Henrik Bengtsson},
+  year = {2021},
+  note = {R package version 0.58.0},
+  url = {https://CRAN.R-project.org/package=matrixStats},
+}
+@Manual{R-metadat,
+  title = {metadat: Meta-Analysis Datasets},
+  author = {Thomas White and Daniel Noble and Alistair Senior and W. Kyle Hamilton and Wolfgang Viechtbauer},
+  year = {2022},
+  note = {R package version 1.2-0},
+  url = {https://CRAN.R-project.org/package=metadat},
+}
+@Article{R-metafor,
+  title = {Conducting meta-analyses in {R} with the {metafor} package},
+  author = {Wolfgang Viechtbauer},
+  journal = {Journal of Statistical Software},
+  year = {2010},
+  volume = {36},
+  number = {3},
+  pages = {1--48},
+  url = {https://doi.org/10.18637/jss.v036.i03},
+}
+@Manual{R-semPlot,
+  title = {semPlot: Path Diagrams and Visual Analysis of Various SEM Packages'
+Output},
+  author = {Sacha Epskamp},
+  year = {2022},
+  note = {R package version 1.1.6},
+  url = {https://CRAN.R-project.org/package=semPlot},
+}
+@Manual{R-tidybayes,
+  title = {{tidybayes}: Tidy Data and Geoms for {Bayesian} Models},
+  author = {Matthew Kay},
+  year = {2022},
+  note = {R package version 3.0.2},
+  url = {http://mjskay.github.io/tidybayes/},
+  doi = {10.5281/zenodo.1308151},
+}
+@Manual{R-tinylabels,
+  title = {{tinylabels}: Lightweight Variable Labels},
+  author = {Marius Barth},
+  year = {2022},
+  note = {R package version 0.2.3},
+  url = {https://cran.r-project.org/package=tinylabels},
+}
+@Manual{R-usethis,
+  title = {usethis: Automate Package and Project Setup},
+  author = {Hadley Wickham and Jennifer Bryan and Malcolm Barrett},
+  year = {2022},
+  note = {R package version 2.1.6},
+  url = {https://CRAN.R-project.org/package=usethis},
+}
+@Article{R-qgraph,
+  title = {{qgraph}: Network Visualizations of Relationships in Psychometric Data},
+  author = {Sacha Epskamp and Ang\'elique O. J. Cramer and Lourens J. Waldorp and Verena D. Schmittmann and Denny Borsboom},
+  journal = {Journal of Statistical Software},
+  year = {2012},
+  volume = {48},
+  number = {4},
+  pages = {1--18},
+}
